# ttdm

./: README.md  pyproject.toml
src/: run.py
src/ttdm/: data-mc.ipynb  run_utils.py
src/ttdm/.ipynb_checkpoints/: data-mc-checkpoint.ipynb
src/ttdm/filesets/: fileset_ttdm_mphi50-250-data.pickle  fileset_ttdm_mphi50-250.pickle
src/ttdm/processors/: DataMCProcessor.py
